Added in 'main.html' block abs, header cearch-bar and news button. Adedd in style file mixin:font, flex.

--- a/main.html
+++ b/main.html
@@ -4,33 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
     <link rel="stylesheet" href="./dist/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
 
-        <div class="abs-block first-abs-block"></div>
+        <div class="abs-block first-abs-block">
+            <h4>A1 <br>2126x477</h4>
+        </div>
 
         <header class="header">
             <div class="header-top">
-                <div class="header-top-logo"></div>
+                <div class="header-top-logo">
+                    <img src="./images/LOGOTYPE.png" alt="#">
+                </div>
 
                 <div class="header-top-search-bar">
 
                     <div class="header-top-search-bar-left">
-                        <input type="text" name="" id="">
+                        <input type="text" name="" id="" placeholder="Найти">
                     </div>
 
                     <div class="header-top-search-bar-right">
-                        <div class="header-top-search-bar-right-social">
-                            <div class="arrow"></div>
+                        <div class="header-top-search-bar-right-box social">
+                            <div class="arrow">
+                                <img src="./images/Arrow-down.svg" alt="#">
+                            </div>
                             <h3>Соцсети</h3>
                         </div>
 
-                        <div class="header-top-search-bar-right-language">
-                            <div class="arrow"></div>
+                        <div class="header-top-search-bar-right-box language">
+                            <div class="arrow">
+                                <img src="./images/Arrow-down.svg" alt="#">
+                            </div>
                             <h3>Steppe Rus</h3>
                         </div>
                     </div>
@@ -39,42 +47,49 @@
 
             <div class="header-bottom">
                 <div class="header-bottom-slider">
-                    <button class="btns btn-first">
-                        <a href="#">Сейчас читают</a>
-                    </button>
+                    <div class="header-bottom-slider-left">
+                        <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-first">
+                            <a href="#">Сейчас читают</a>
+                        </button>
 
-                    <button class="btns btn-srcond">
-                        <a href="#">Steppe Awards</a>
-                    </button>
+                        <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-second btns-type">
+                            <a href="#">Steppe Awards</a>
+                        </button>
 
-                    <button class="btns btn-third">
-                        <a href="#">#Elon Musk</a>
-                    </button>
+                        <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-third btns-type">
+                            <a href="#">#Elon Musk</a>
+                        </button>
 
-                    <button class="btns btn-fourth">
-                        <a href="#">Space X</a>
-                    </button>
+                        <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-fourth btns-type">
+                            <a href="#">Space X</a>
+                        </button>
 
-                    <button class="btns btn-fifth">
-                        <a href="#">Токаев</a>
-                    </button>
+                        <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-fifth btns-type">
+                            <a href="#">Токаев</a>
+                        </button>
 
-                    <button class="btns btn-sixth">
-                        <a href="#">Астана</a>
-                    </button>
+                        <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-sixth btns-type">
+                            <a href="#">Астана</a>
+                        </button>
 
-                    <button class="btns btn-seventh">
-                        <a href="#">Twitter</a>
-                    </button>
+                        <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-seventh btns-type">
+                            <a href="#">Twitter</a>
+                        </button>
 
-                    <button class="btns btn-eight">
-                        <a href="#">Ninety One</a>
-                    </button>
+                        <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-eight btns-type">
+                            <a href="#">Ninety One</a>
+                        </button>
+                    </div>
 
-                    <div class="header-bottom-slider-arrow"></div>
+                    <div class="header-bottom-slider-right">
 
-                    <div class="header-bottom-slider-switch">
-                        <div class="header-bottom-slider-switch-circle"></div>
+                        <div class="header-bottom-slider-right-arrow">
+                            <img src="./images/Arrow-right.svg" alt="#">
+                        </div>
+
+                        <div class="header-bottom-slider-right-switch">
+                            <div class="header-bottom-slider-right-switch-circle"></div>
+                        </div>
                     </div>
                 </div>
             </div>
