Added main section banner, main news

--- a/main.html
+++ b/main.html
@@ -95,6 +95,123 @@
             </div>
         </header>
 
+        <main class="main">
+
+            <section class="main-title">
+                <div class="main-title-left">
+                    <div class="main-title-left-top">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <div class="title-left-image images"></div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <h5>Новые 30: истории первых 
+                                        выпускников КИМЭП</h5>
+                                </a>
+                            </li>
+                        </ul>                        
+                    </div>
+
+                    <div class="main-title-left-bottom">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <div class="title-box">
+                                        <div class="images title-box-image"></div>
+                                        <div class="title-box-right">
+                                            <div class="name">
+                                                <h6>Steppe Tag</h6>
+                                            </div>
+                                            <p>Какой вы социальный 
+                                                предприниматель?</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    <div class="title-box">
+                                        <div class="images title-box-image"></div>
+                                        <div class="title-box-right">
+                                            <div class="name">
+                                                <h6>Steppe Tag</h6>
+                                            </div>
+                                            <p>Какой вы социальный 
+                                                предприниматель?</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    <div class="title-box">
+                                        <div class="images title-box-image"></div>
+                                        <div class="title-box-right">
+                                            <div class="name">
+                                                <h6>Steppe Tag</h6>
+                                            </div>
+                                            <p>Какой вы социальный 
+                                                предприниматель?</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="main-title-center">
+                    <div class="main-title-center-image"></div>
+                    <h3>Main-Title-Main-Title-Main-Title- <br>Main-Title-Main-Title-Main-Title-...</h3>
+                </div>
+
+                <div class="main-title-right">
+                    <div class="main-title-right-info">
+                        <h5>Новости</h5>
+                        <div class="main-title-right-info-box">
+                            <a href="#">
+                                <p>20.09 <span>NEWS-PARAGRAPH-NEWS-PARAGRAPH-NEWS-PARAGRAPH-...</span></p>
+                            </a>
+                        </div>
+
+                        <div class="main-title-right-info-box">
+                            <a href="#">
+                                <p>20.09 <span>NEWS-PARAGRAPH-NEWS-PARAGRAPH-NEWS-PARAGRAPH-...</span></p>
+                            </a>
+                        </div>
+
+                        <div class="main-title-right-info-box">
+                            <a href="#">
+                                <p>20.09 <span>NEWS-PARAGRAPH-NEWS-PARAGRAPH-NEWS-PARAGRAPH-...</span></p>
+                            </a>
+                        </div>
+
+                        <div class="main-title-right-info-box">
+                            <a href="#">
+                                <p>20.09 <span>NEWS-PARAGRAPH-NEWS-PARAGRAPH-NEWS-PARAGRAPH-...</span></p>
+                            </a>
+                        </div>
+
+                        <div class="main-title-right-info-box last-box">
+                            <a href="#">
+                                <p>20.09 <span>NEWS-PARAGRAPH-NEWS-PARAGRAPH-NEWS-PARAGRAPH-...</span></p>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="main-title-right-scroll">
+                        <div class="main-title-right-scroll-line"></div>
+                    </div>
+                </div>
+            </section>
+
+        </main>
+
     </div>
 </body>
 </html>
