добавлена ссылка на дополнительные результаты, выполнен блок для подключения почты для рассылок, начата нижняя часть сайта

--- a/main.html
+++ b/main.html
@@ -668,6 +668,48 @@
                 </div>
             </section>
 
+            <section class="results">
+                <a href="#">
+                    <h2>Еще результаты</h2>
+                </a>
+            </section>
+
+            <section class="mailing">
+                <div class="mailing-top">
+                    <div class="mailing-top-logo">
+                        <img src="./images/steppe-mailing-logo.svg" alt="#">
+                    </div>
+                    <h5>Еженедельная рассылка: только важное, одним письмом</h5>
+                </div>
+
+                <div class="mailing-bottom">
+                    <input type="email" name="" id="" placeholder="Введите ваш e-mail">
+                    <button class="mailing-bottom-btn">Подписаться</button>
+                </div>
+            </section>
+
+            <section class="ideas">
+                <div class="ideas-top">
+                    <div class="ideas-top-left">
+                        <img src="./images/LOGOTYPE-ideas.svg" alt="#">
+                        <h4>Прогрессивный сайт о жизни работе и увлечениях</h4>
+                    </div>
+
+                    <div class="ideas-top-right">
+                        <div class="ideas-top-right-firstpart">
+                            <h5>H1 Extra Bold - 36</h5>
+                            <button class="ideas-top-right-firstpart-btn">Button</button>
+                        </div>
+                        <div class="ideas-top-right-secondpart">
+                            <h5>H1 Extra Bold - 36</h5>
+                            <h5>H1 Extra Bold - 36</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ideas-bottom"></div>
+            </section>
+
         </main>
 
     </div>
