Начата работа над версией планшета

--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
 
-        <div class="abs-block first-abs-block">
+        <div class="abs-block-first">
             <h4>A1 <br>2126x477</h4>
         </div>
 
         <header class="header">
-            <div class="header-top">
+            <div class="header-top wrapper">
                 <div class="header-top-logo">
                     <img src="./images/LOGOTYPE.png" alt="#">
                 </div>
@@ -27,6 +27,12 @@
                         <input type="text" name="" id="" placeholder="Найти">
                     </div>
 
+                    <div class="header-top-search-bar-right-tablet">
+                        <h3>Настройки</h3>
+                        <div class="header-top-search-bar-right-tablet-theme">
+                            <div class="header-top-search-bar-right-tablet-theme-circle"></div>
+                        </div>
+                    </div>
                     <div class="header-top-search-bar-right">
                         <div class="header-top-search-bar-right-box social">
                             <div class="arrow">
@@ -45,7 +51,7 @@
                 </div>
             </div>
 
-            <div class="header-bottom">
+            <div class="header-bottom wrapper">
                 <div class="header-bottom-slider">
                     <div class="header-bottom-slider-left">
                         <button class="header-bottom-slider-left-btns header-bottom-slider-left-btns-first">
@@ -210,7 +216,7 @@
                 </div>
             </section>
 
-            <section class="main-card">
+            <section class="main-card wrapper">
                 <div class="main-card-block">
                     <div class="main-card-block-top"></div>
                     <div class="main-card-block-bottom">
@@ -288,7 +294,7 @@
 
             </section>
 
-            <section class="small-card">
+            <section class="small-card wrapper">
                 <div class="small-card-left">
 
                     <div class="small-card-left-info">
@@ -412,7 +418,7 @@
                 </div>
             </section>
 
-            <section class="abs-block">
+            <section class="abs-block wrapper">
                 <div class="abs-block-show">
                     <h4>A5 <br>970x250</h4>
                 </div>
@@ -516,7 +522,7 @@
                 </div>
             </section>
 
-            <section class="test">
+            <section class="test wrapper">
                 <div class="test-title">
                     <div class="test-title-abs"></div>
                     <button class="test-title-btn">
@@ -548,7 +554,7 @@
                 </div>
             </section>
 
-            <section class="small-card">
+            <section class="small-card wrapper">
                 <div class="small-card-left">
 
                     <div class="small-card-left-info">
@@ -672,13 +678,13 @@
                 </div>
             </section>
 
-            <section class="results">
+            <section class="results wrapper">
                 <a href="#">
                     <h2>Еще результаты</h2>
                 </a>
             </section>
 
-            <section class="mailing">
+            <section class="mailing wrapper">
                 <div class="mailing-top">
                     <div class="mailing-top-logo">
                         <img src="./images/steppe-mailing-logo.svg" alt="#">
@@ -692,7 +698,7 @@
                 </div>
             </section>
 
-            <section class="ideas">
+            <section class="ideas wrapper">
                 <div class="ideas-top">
                     <div class="ideas-top-left">
                         <img src="./images/LOGOTYPE-ideas.svg" alt="#">
@@ -729,7 +735,7 @@
 
         </main>
 
-        <footer class="footer">
+        <footer class="footer wrapper">
             <img src="./images/LOGOTYPE-footer.svg" alt="#">
         </footer>
 
