Начата работа с мобильной версией

--- a/main.html
+++ b/main.html
@@ -255,6 +255,28 @@
                     </div>
                 </div>
 
+                <div class="main-title-mobile">
+                    <div class="main-title-mobile-image"></div>
+
+                    <div class="main-title-mobile-data">
+
+                        <div class="main-title-mobile-data-day">
+                            <p>19 Июля, 2022</p>
+                        </div>
+
+                        <div class="main-title-mobile-data-time">
+                            <p>20 минут</p>
+                        </div>
+                    </div>
+
+                    <h3>Header H1 - Bold <br>
+                        Header H1 - Bold <br>
+                        Header H1 - Bold</h3>
+
+                    <h4>Main-Paragraph-Main-Paragraph-Main-Paragraph-Main-Paragraph-Main-Paragraph-</h4>
+
+                </div>
+
             </section>
 
             <section class="main-card wrapper">
