Мобильная версия в процессе работы

--- a/main.html
+++ b/main.html
@@ -105,7 +105,7 @@
 
             <section class="main-title">
 
-                <div class="main-title-right-tablet">
+                <!-- <div class="main-title-right-tablet">
                     <h3>Новости</h3>
                     <div class="main-title-right-tablet-top">
                         <div class="main-title-right-tablet-top-box first">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <div class="main-title-right-tablet-scroll"></div>
-                </div>
+                </div> -->
 
                 <div class="main-title-left">
                     <div class="main-title-left-top">
@@ -355,7 +355,7 @@
                     </div>
                 </div>
 
-                <div class="main-card-block-tablet">
+                <!-- <div class="main-card-block-tablet">
                     <div class="main-card-block-tablet-top"></div>
 
                     <div class="main-card-block-tablet-bottom">
@@ -397,7 +397,7 @@
                                 Header - H2 - Bold</h3>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </section>
 
@@ -524,7 +524,7 @@
                     </div>
                 </div>
 
-                <div class="small-card-tablet">
+                <!-- <div class="small-card-tablet">
                     <div class="small-card-tablet-top"></div>
                     <div class="small-card-tablet-bottom">
                         <div class="small-card-tablet-bottom-data">
@@ -595,7 +595,7 @@
                             <h3>NASA опубликовало первое сверхчеткое изображение вселенной</h3>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </section>
 
             <section class="abs-block wrapper">
@@ -701,7 +701,7 @@
                     <div class="inform-part-item-image"></div>
                 </div>
 
-                <div class="inform-part-item-tablet">
+                <!-- <div class="inform-part-item-tablet">
                     <div class="inform-part-item-tablet-top"></div>
                     <div class="inform-part-item-tablet-bottom">
                         <h3>Display - H3 - Extrabold <br>
@@ -779,7 +779,7 @@
                                 </div>
                             </div>
                     </div>
-                </div>
+                </div> -->
             </section>
 
             <section class="test wrapper">
@@ -992,7 +992,7 @@
                     </div>
                 </div>
 
-                <div class="ideas-tablet-first">
+                <!-- <div class="ideas-tablet-first">
                     <img src="./images/dark-logo-tablet.svg" alt="#">
                     <h5>Прогрессивный сайт о жизни работе и увлечениях</h5>
                 </div>
@@ -1018,7 +1018,7 @@
                     <div class="ideas-tablet-fourth-image">
                         <img src="./images/Social-Banner-tablet.png" alt="#">
                     </div>
-                </div>
+                </div> -->
                 
             </section>
 
@@ -1028,9 +1028,9 @@
             <img src="./images/LOGOTYPE-footer.svg" alt="#">
         </footer>
 
-        <footer class="tablet-footer wrapper">
+        <!-- <footer class="tablet-footer wrapper">
             <img src="./images/LOGOTYPE-footer-tablet.svg" alt="#">
-        </footer>
+        </footer> -->
 
     </div>
 </body>
