--- a/main.html
+++ b/main.html
@@ -1223,7 +1223,12 @@
                     </div>
 
                     <div class="ideas-bottom-right">
-                        <img src="./images/Social-Banner.svg" alt="#">
+                        <img class="ideas-bottom-right-first" src="./images/insta-icon.svg" alt="#">
+                        <img class="ideas-bottom-right-second" src="./images/telega-icon.svg" alt="#">
+                        <img class="ideas-bottom-right-third" src="./images/facebook-icon.svg" alt="#">
+                        <img class="ideas-bottom-right-fourth" src="./images/VK-icon.svg" alt="#">
+                        <img class="ideas-bottom-right-fifth" src="./images/youtube-icon.svg" alt="#">
+                        <!-- <img src="./images/Social-Banner.svg" alt="#"> -->
                     </div>
                 </div>
 
@@ -1252,7 +1257,12 @@
                         <h5>Пользовательское соглашение</h5>
                     </div>
                     <div class="ideas-tablet-fourth-image">
-                        <img src="./images/Social-Banner-tablet.png" alt="#">
+                        <!-- <img src="./images/Social-Banner-tablet.png" alt="#"> -->
+                        <img class="ideas-tablet-fourth-image-first" src="./images/insta-icon-tablet.svg" alt="#">
+                        <img class="ideas-tablet-fourth-image-second" src="./images/telega-icon-tablet.svg" alt="#">
+                        <img class="ideas-tablet-fourth-image-third" src="./images/facebook-icon-tablet.svg" alt="#">
+                        <img class="ideas-tablet-fourth-image-fourth" src="./images/VK-icon-tablet.svg" alt="#">
+                        <img class="ideas-tablet-fourth-image-fifth" src="./images/youtube-icon-tablet.svg" alt="#">
                     </div>
                 </div>
                 
